backend aws support

--- a/Yaml/Properties/launchSettings.json
+++ b/Yaml/Properties/launchSettings.json
@@ -10,7 +10,7 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5193/swagger/index.html",
       "environmentVariables": {
@@ -20,7 +20,7 @@
     },
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5193",
       "environmentVariables": {
