--- a/Yaml/YamlFile/App.yaml
+++ b/Yaml/YamlFile/App.yaml
@@ -1,3 +1,106 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: cluster-test-svc
+  namespace: test-app-ns
+spec:
+  selector:
+    app:  cluster-test-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: ClusterIP
+---
+apiVersion: secrets-store.csi.x-k8s.io/v1
+kind: SecretProviderClass
+metadata:
+  name: test-app-keyvault-spc
+  namespace: test-app-ns
+spec:
+  parameters:
+    keyvaultName: kv-saas-core
+    objects: |
+      array:
+        - | 
+          objectType: secret 
+          objectName: KeyVaultOne 
+        - | 
+          objectType: secret 
+          objectName: TiDB-odbc-connector 
+        - | 
+          objectType: secret 
+          objectName: SendGridKey 
+        - | 
+          objectType: secret 
+          objectName: AzureRedis-pass 
+    tenantId: "1bf2b880-115d-4e08-a258-aa1dc41dc0d5"
+    usePodIdentity: "false"
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: "69ab9774-6317-4963-90b4-aea06d941ebd"
+  provider: azure
+  secretObjects:
+    - secretName: test-app-secret
+      type: Opaque
+      data:
+        - key: KeyVaultOne 
+          objectName: KeyVaultOne 
+        - key: TiDB-odbc-connector 
+          objectName: TiDB-odbc-connector 
+        - key: SendGridKey 
+          objectName: SendGridKey 
+        - key: AzureRedis-pass 
+          objectName: AzureRedis-pass 
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: cluster-test-configmap
+  namespace: test-app-ns
+data:
+  ApiDynamicHandler: "https://aeonapipo.azurewebsites.net/WF/Comm/Handler.ashx?"
+  AppCenterDSN: "Server=4.241.26.23;Port=4000;Database=Saas_Core;Uid=root;Pwd=;AllowUserVariables=True;MaxPoolSize=2000"
+  ENVIRONMENT: "dev"
+  BaseUrl: "https://saascore.thomaszou2077.com/"
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: cluster-test-ingress
+  namespace: test-app-ns
+spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - yaml.thomaszou2077.com
+      secretName: cluster-test-tls-secret
+  rules:
+    - host: yaml.thomaszou2077.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: cluster-test-svc
+                port:
+                  number: 80
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: cluster-test-40-pvc
+  namespace: test-app-ns
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: default
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -66,15 +169,15 @@ spec:
               name: secrets-store-inline 
               readOnly: true 
             - mountPath: /dv1
-              name: cluster-test-698-pvc 
+              name: cluster-test-40-pvc 
           resources:
            limits:
              memory: 512Mi
              cpu: "1"
       volumes:
-      - name: cluster-test-698-pvc
+      - name: cluster-test-40-pvc
         persistentVolumeClaim:
-          claimName: cluster-test-698-pvc
+          claimName: cluster-test-40-pvc
       - name: secrets-store-inline
         csi:
           driver: secrets-store.csi.k8s.io
