--- a/Yaml/YamlFile/yaml/demo.yaml
+++ b/Yaml/YamlFile/yaml/demo.yaml
@@ -1,69 +1,39 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: cluster-test-deployment
-  namespace: test-app-ns
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: cluster-test-app
-  strategy:
-    rollingUpdate:
-      maxSurge: 3
-      maxUnavailable: 3
-  minReadySeconds: 5
-  template:
-    metadata:
-      labels:
-        app: cluster-test-app
-        aadpodidbinding: saas-pod-identity
-    spec:
-      containers:
-        - name: cluster-test
-          image: djpsaascoreacr.azurecr.io/saas-api:24.2.8.37
-          imagePullPolicy: Always
-          env:
-            - name: conf1
-              valueFrom:
-                configMapKeyRef:
-                  name: cluster-test-configmap
-                  key: conf1
-            - name: KeyVaultOne
-              valueFrom:
-                secretKeyRef:
-                  name: test-app-secret
-                  key: KeyVaultOne
-            - name: TiDB-odbc-connector
-              valueFrom:
-                secretKeyRef:
-                  name: test-app-secret
-                  key: TiDB-odbc-connector
-            - name: SendGridKey
-              valueFrom:
-                secretKeyRef:
-                  name: test-app-secret
-                  key: SendGridKey
-          ports:
-            - containerPort: 80
-          volumeMounts:
-            - mountPath: /mnt/secrets-store
-              name: secrets-store-inline
-              readOnly: true
-            - mountPath: /dv1
-              name: cluster-test-808-pvc
-          resources:
-            limits:
-              memory: 512Mi
-              cpu: "1"
-      volumes:
-        - name: cluster-test-808-pvc
-          persistentVolumeClaim:
-            claimName: cluster-test-808-pvc
-        - name: secrets-store-inline
-          csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: test-app-keyvault-spc
-        
+ApiVersion: secrets-store.csi.x-k8s.io/v1
+Metadata:
+  Name: test-app-keyvault-spc
+  NamespaceProperty: test-app-ns
+  OwnerReferences:
+  ResourceVersion:
+  SelfLink:
+  Uid:
+OtherFields:
+  spec:
+    parameters:
+      keyvaultName: kv-saas-core
+      objects: >
+        array:
+          - |
+            objectType: secret
+            objectName: KeyVaultOne
+          - |
+            objectType: secret
+            objectName: TiDB-odbc-connector
+          - |
+            objectType: secret
+            objectName: AzureRedis-pass
+      tenantId: 1bf2b880-115d-4e08-a258-aa1dc41dc0d5
+      usePodIdentity: false
+      useVMManagedIdentity: true
+      userAssignedIdentityID: 69ab9774-6317-4963-90b4-aea06d941ebd
+    provider: azure
+    secretObjects:
+      - secretName: test-app-secret
+        type: Opaque
+        data:
+          - key: KeyVaultOne
+            objectName: KeyVaultOne
+          - key: TiDB-odbc-connector
+            objectName: TiDB-odbc-connector
+          - key: AzureRedis-pass
+            objectName: AzureRedis-pass
+Kind: SecretProviderClass
