--- a/Yaml/YamlFile/yaml/secret.yaml
+++ b/Yaml/YamlFile/yaml/secret.yaml
@@ -1,24 +1,64 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-deployment
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      serviceAccountName: default
+      containers:
+        - name: nginx
+          image: nginx:latest
+          ports:
+            - containerPort: 80
+          volumeMounts:
+            - name: secrets-store-inline
+              mountPath: "/mnt/secrets"
+              readOnly: true
+      volumes:
+        - name: secrets-store-inline
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: "my-aws-secrets"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
+  selector:
+    app: nginx
+
+---
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: pssql-keyvault-spc
-  namespace: pssql-ns
+  name: my-aws-secrets
 spec:
-  provider: azure
+  provider: aws
   parameters:
-    usePodIdentity: 'true'
-    useVMManagedIdentity: 'false'
-    tenantId: '1bf2b880-115d-4e08-a258-aa1dc41dc0d5'
-    keyvaultName: test-kv-zy
-    userAssignedIdentityID: '277809f3-155d-4b95-b44e-698844918adb' # 页面上的ManagedID
     objects: |
-      array:
-        - |          
-          objectName: keyvault-one
-          objectType: secret  
+      - objectName: "Name"
+        objectType: "secretsmanager"
+    region: "ap-northeast-1"
   secretObjects:
-    - secretName: pssql-secret # Kubernetes Secret 的名称 
+    - secretName: Name
       type: Opaque
       data:
-        - key: KeyVaultOne  # Kubernetes Secret 中的键
-          objectName:  keyvault-one  # Azure Key Vault 中的秘密名称
+        - key: Name
+          objectName: Name
