--- a/Yaml/YamlFile/App.yaml
+++ b/Yaml/YamlFile/App.yaml
@@ -1,116 +1,13 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: cluster-test-svc
-  namespace: test-app-ns
-spec:
-  selector:
-    app:  cluster-test-app
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: ClusterIP
----
-apiVersion: secrets-store.csi.x-k8s.io/v1
-kind: SecretProviderClass
-metadata:
-  name: test-app-keyvault-spc
-  namespace: test-app-ns
-spec:
-  parameters:
-    keyvaultName: kv-saas-core
-    objects: |
-      array:
-        - | 
-          objectType: secret 
-          objectName: KeyVaultOne 
-        - | 
-          objectType: secret 
-          objectName: TiDB-odbc-connector 
-        - | 
-          objectType: secret 
-          objectName: SendGridKey 
-        - | 
-          objectType: secret 
-          objectName: AzureRedis-pass 
-    tenantId: "1bf2b880-115d-4e08-a258-aa1dc41dc0d5"
-    usePodIdentity: "false"
-    useVMManagedIdentity: "true"
-    userAssignedIdentityID: "69ab9774-6317-4963-90b4-aea06d941ebd"
-  provider: azure
-  secretObjects:
-    - secretName: test-app-secret
-      type: Opaque
-      data:
-        - key: KeyVaultOne 
-          objectName: KeyVaultOne 
-        - key: TiDB-odbc-connector 
-          objectName: TiDB-odbc-connector 
-        - key: SendGridKey 
-          objectName: SendGridKey 
-        - key: AzureRedis-pass 
-          objectName: AzureRedis-pass 
-
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: cluster-test-configmap
-  namespace: test-app-ns
-data:
-  ApiDynamicHandler: "https://aeonapipo.azurewebsites.net/WF/Comm/Handler.ashx?"
-  AppCenterDSN: "Server=4.241.26.23;Port=4000;Database=Saas_Core;Uid=root;Pwd=;AllowUserVariables=True;MaxPoolSize=2000"
-  ENVIRONMENT: "dev"
-  BaseUrl: "https://saascore.thomaszou2077.com/"
-
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: cluster-test-ingress
-  namespace: test-app-ns
-spec:
-  ingressClassName: nginx
-  tls:
-    - hosts:
-        - yaml.thomaszou2077.com
-      secretName: cluster-test-tls-secret
-  rules:
-    - host: yaml.thomaszou2077.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: cluster-test-svc
-                port:
-                  number: 80
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: cluster-test-40-pvc
-  namespace: test-app-ns
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: default
-  resources:
-    requests:
-      storage: 1Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cluster-test-deployment
-  namespace: test-app-ns
+  name: aws-cluster-deployment
+  namespace: aws-app-ns
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: cluster-test-app
+      app: aws-cluster-app
   strategy:
     rollingUpdate:
       maxSurge: 3
@@ -119,69 +16,34 @@ spec:
   template:
     metadata:
       labels:
-        app: cluster-test-app
-        aadpodidbinding: saas-pod-identity
+        app: aws-cluster-app
+        aadpodidbinding: 1
     spec:
       containers:
-        - name: cluster-test
-          image: djpsaascoreacr.azurecr.io/saas-api:24.2.8.37
+        - name: aws-cluster
+          image: nginx:latest
           imagePullPolicy: Always
           env:
-            - name: ApiDynamicHandler 
-              valueFrom: 
-                configMapKeyRef: 
-                  name: cluster-test-configmap
-                  key: ApiDynamicHandler
-            - name: AppCenterDSN 
-              valueFrom: 
-                configMapKeyRef: 
-                  name: cluster-test-configmap
-                  key: AppCenterDSN
-            - name: ENVIRONMENT 
-              valueFrom: 
-                configMapKeyRef: 
-                  name: cluster-test-configmap
-                  key: ENVIRONMENT
-            - name: BaseUrl 
-              valueFrom: 
-                configMapKeyRef: 
-                  name: cluster-test-configmap
-                  key: BaseUrl
-            - name: KeyVaultOne 
+            - name: Name 
               valueFrom: 
                 secretKeyRef: 
-                  name: test-app-secret
-                  key: KeyVaultOne
-            - name: TiDB-odbc-connector 
-              valueFrom: 
-                secretKeyRef: 
-                  name: test-app-secret
-                  key: TiDB-odbc-connector
-            - name: SendGridKey 
-              valueFrom: 
-                secretKeyRef: 
-                  name: test-app-secret
-                  key: SendGridKey
+                  name: aws-app-secret
+                  key: Name
           ports: 
             - containerPort: 80
           volumeMounts:
             - mountPath: /mnt/secrets-store 
               name: secrets-store-inline 
               readOnly: true 
-            - mountPath: /dv1
-              name: cluster-test-40-pvc 
           resources:
            limits:
              memory: 512Mi
-             cpu: "1"
+             cpu: "0.25"
       volumes:
-      - name: cluster-test-40-pvc
-        persistentVolumeClaim:
-          claimName: cluster-test-40-pvc
       - name: secrets-store-inline
         csi:
           driver: secrets-store.csi.k8s.io
           readOnly: true
           volumeAttributes:
-            secretProviderClass: test-app-keyvault-spc
+            secretProviderClass: aws-app-keyvault-spc
         
