--- a/Yaml/YamlFile/yaml/secret.yaml
+++ b/Yaml/YamlFile/yaml/secret.yaml
@@ -18,6 +18,9 @@ spec:
           image: nginx:latest
           ports:
             - containerPort: 80
+          env:
+            - name: Name
+              value: "/mnt/secrets/Name"
           volumeMounts:
             - name: secrets-store-inline
               mountPath: "/mnt/secrets"
@@ -57,7 +60,7 @@ spec:
         objectType: "secretsmanager"
     region: "ap-northeast-1"
   secretObjects:
-    - secretName: Name
+    - secretName: secret-name
       type: Opaque
       data:
         - key: Name
