--- a/Yaml/appsettings.json
+++ b/Yaml/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=yaml;user=root;password=5545125p"
+    "DefaultConnection": "Server=4.241.26.23;Database=yaml;Port=4000;Uid=root;Pwd=;AllowUserVariables=True;"
   },
   "Azure": {
     "ClientId": "client1",
