Fix Bug : CShtml not exist when building

--- a/Yaml/Yaml.csproj
+++ b/Yaml/Yaml.csproj
@@ -36,12 +36,15 @@
       <Folder Include="wwwroot\assets\locales\ja\" />
     </ItemGroup>
 
+    <!-- for cshtml -->
     <ItemGroup>
         <Content Include="YamlFile/**" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
+    
     <PropertyGroup>
         <EnableDefaultContentItems>false</EnableDefaultContentItems>
     </PropertyGroup>
+    
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Redis\redis-deployment.cshtml" />
       <_ContentIncludedByDefault Remove="out\web.config" />
