Create resource when not exited, update when exists

--- a/Yaml/Yaml.csproj
+++ b/Yaml/Yaml.csproj
@@ -39,6 +39,7 @@
     <!-- for cshtml -->
     <ItemGroup>
         <Content Include="YamlFile/**" CopyToOutputDirectory="PreserveNewest" />
+        <Content Include="wwwroot/**" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
     
     <PropertyGroup>
