--- a/Yaml/YamlFile/App.yaml
+++ b/Yaml/YamlFile/App.yaml
@@ -1,46 +1,22 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: aws-cluster-deployment
+  name: aws-cluster-ingress
   namespace: aws-app-ns
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: aws-cluster-app
-  strategy:
-    rollingUpdate:
-      maxSurge: 3
-      maxUnavailable: 3
-  minReadySeconds: 5 
-  template:
-    metadata:
-      labels:
-        app: aws-cluster-app
-        aadpodidbinding: 1
-    spec:
-      containers:
-        - name: aws-cluster
-          image: nginx:latest
-          imagePullPolicy: Always
-          env:
-            - name: Name 
-              value: /mnt/secrets-store/Name
-          ports: 
-            - containerPort: 80
-          volumeMounts:
-            - mountPath: /mnt/secrets-store 
-              name: secrets-store-inline 
-              readOnly: true 
-          resources:
-           limits:
-             memory: 512Mi
-             cpu: "0.25"
-      volumes:
-      - name: secrets-store-inline
-        csi:
-          driver: secrets-store.csi.k8s.io
-          readOnly: true
-          volumeAttributes:
-            secretProviderClass: aws-app-keyvault-spc
-        
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - aws.thomaszou2077.com
+      secretName: aws-cluster-tls-secret
+  rules:
+    - host: aws.thomaszou2077.com
+      http:
+        paths:
+          - path: 1
+            pathType: Prefix
+            backend:
+              service:
+                name: aws-cluster-svc
+                port:
+                  number: 80
