--- a/Yaml/Yaml.csproj
+++ b/Yaml/Yaml.csproj
@@ -41,7 +41,12 @@
         <Content Include="YamlFile/**" CopyToOutputDirectory="PreserveNewest" />
         <Content Include="wwwroot/**" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
-    
+    <ItemGroup>
+        <None Update="YamlFile\**\*.cshtml">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
     <PropertyGroup>
         <EnableDefaultContentItems>false</EnableDefaultContentItems>
     </PropertyGroup>
