--- a/Yaml/Yaml.csproj
+++ b/Yaml/Yaml.csproj
@@ -14,6 +14,8 @@
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
     <ItemGroup>
+        <PackageReference Include="Ardalis.GuardClauses" Version="4.5.0" />
+        <PackageVersion Include="Ardalis.GuardClauses" Version="4.2.0" />
         <PackageReference Include="KubernetesClient" Version="12.1.1" />
         <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
