--- a/Yaml/Yaml.csproj
+++ b/Yaml/Yaml.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>Yaml</RootNamespace>
@@ -14,66 +14,79 @@
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
     <ItemGroup>
+        <PackageReference Include="Ardalis.GuardClauses" Version="4.5.0" />
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
         <PackageReference Include="KubernetesClient" Version="12.1.1" />
         <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
+        <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="2.2.0" />
         <PackageReference Include="Microsoft.Azure.Management.Fluent" Version="1.38.1" />
         <PackageReference Include="Microsoft.Azure.Management.ResourceManager.Fluent" Version="1.38.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.5" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
         <PackageReference Include="RazorLight" Version="2.3.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-        
+
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="RazorEngine.NetCore" Version="3.1.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
         <PackageReference Include="YamlDotNet" Version="13.7.1" />
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="Infrastructure\Presistence\" />
-      <Folder Include="uploads\" />
-      <Folder Include="wwwroot\assets\locales\en\" />
-      <Folder Include="wwwroot\assets\locales\ja\" />
+        <Folder Include="Infrastructure\Presistence\" />
+        <Folder Include="uploads\" />
     </ItemGroup>
 
     <!-- for cshtml -->
     <ItemGroup>
+        <Content Include="data\app.db" />
         <Content Include="YamlFile/**" CopyToOutputDirectory="PreserveNewest" />
         <Content Include="wwwroot/**" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
-    
+    <ItemGroup>
+        <None Update="YamlFile\**\*.cshtml">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Remove="data\app.db" />
+    </ItemGroup>
+
     <PropertyGroup>
         <EnableDefaultContentItems>false</EnableDefaultContentItems>
     </PropertyGroup>
-    
+
     <ItemGroup>
-      <_ContentIncludedByDefault Remove="Redis\redis-deployment.cshtml" />
-      <_ContentIncludedByDefault Remove="out\web.config" />
-      <_ContentIncludedByDefault Remove="out\appsettings.Development.json" />
-      <_ContentIncludedByDefault Remove="out\appsettings.json" />
-      <_ContentIncludedByDefault Remove="out\uploads\3fbc0426-d594-4253-9866-a0631a91c6c1_theme.json" />
-      <_ContentIncludedByDefault Remove="out\uploads\e567d5dc-924f-4654-9c58-dcdfc0161a3a_response.json" />
-      <_ContentIncludedByDefault Remove="out\uploads\e90fc8fb-e276-4b30-b20d-4c5080889284_content.json" />
-      <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\en-US\translation.json" />
-      <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\en\translation.json" />
-      <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\ja\translation.json" />
-      <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\zh-CN\translation.json" />
-      <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\zh\translation.json" />
-      <_ContentIncludedByDefault Remove="out\Yaml.deps.json" />
-      <_ContentIncludedByDefault Remove="out\Yaml.runtimeconfig.json" />
+        <_ContentIncludedByDefault Remove="Redis\redis-deployment.cshtml" />
+        <_ContentIncludedByDefault Remove="out\web.config" />
+        <_ContentIncludedByDefault Remove="out\appsettings.Development.json" />
+        <_ContentIncludedByDefault Remove="out\appsettings.json" />
+        <_ContentIncludedByDefault Remove="out\uploads\3fbc0426-d594-4253-9866-a0631a91c6c1_theme.json" />
+        <_ContentIncludedByDefault Remove="out\uploads\e567d5dc-924f-4654-9c58-dcdfc0161a3a_response.json" />
+        <_ContentIncludedByDefault Remove="out\uploads\e90fc8fb-e276-4b30-b20d-4c5080889284_content.json" />
+        <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\en-US\translation.json" />
+        <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\en\translation.json" />
+        <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\ja\translation.json" />
+        <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\zh-CN\translation.json" />
+        <_ContentIncludedByDefault Remove="out\wwwroot\assets\locales\zh\translation.json" />
+        <_ContentIncludedByDefault Remove="out\Yaml.deps.json" />
+        <_ContentIncludedByDefault Remove="out\Yaml.runtimeconfig.json" />
     </ItemGroup>
     <ItemGroup>
-      <EmbeddedResource Update="Localization\Application\Command\UserLoginCommand.en.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
-        <LastGenOutput>UserLoginCommand.en.Designer.cs</LastGenOutput>
-      </EmbeddedResource>
+        <EmbeddedResource Update="Localization\Application\Command\UserLoginCommand.en.resx">
+            <Generator>ResXFileCodeGenerator</Generator>
+            <LastGenOutput>UserLoginCommand.en.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
     <ItemGroup>
-      <Compile Update="Localization\Application\Command\UserLoginCommand.en.Designer.cs">
-        <DesignTime>True</DesignTime>
-        <AutoGen>True</AutoGen>
-        <DependentUpon>UserLoginCommand.en.resx</DependentUpon>
-      </Compile>
+        <Compile Update="Localization\Application\Command\UserLoginCommand.en.Designer.cs">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>UserLoginCommand.en.resx</DependentUpon>
+        </Compile>
     </ItemGroup>
 
 </Project>
