--- a/Yaml/appsettings.Development.json
+++ b/Yaml/appsettings.Development.json
@@ -11,5 +11,9 @@
     "TenantId": "",
     "SubscriptionId": "",
     "ManageId": ""
+  },
+  "ConnectionStrings": {
+    "MyDatabase": "Data Source=data/app.db",
+    "UploadDirectory": "uploads"
   }
 }
