--- a/Yaml/appsettings.Production.json
+++ b/Yaml/appsettings.Production.json
@@ -16,8 +16,8 @@
     "SubscriptionId": "S1"
   },
   "ConnectionStrings": {
-    "MyDatabase": "Data Source=/app/data/app.db",
-    "UploadDirectory": "/app/uploads"
+    "MyDatabase": "Data Source=data/app.db",
+    "UploadDirectory": "uploads"
   },
   "AzureBlobStorage": {
     "ContainerName": "yaml",
